Changed package name inside composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "glukash/glu-image",
+    "name": "sviatovigt/glu-image",
     "description": "",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
