Trying to fix autoloading problems

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Glukash\\GluImage": "src/"
+            "Sviatovigt\\GluImage": "src/"
         }
     },
     "config": {
