--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,15 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
+  - 7.1
   - hhvm
 
 before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
 
-script: phpunit
+script:
+  - mkdir -p build/logs
+  - vendor/bin/phpcs
+  - vendor/bin/phpunit
