--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "sviatovigt/glu-image",
-    "description": "",
+    "name": "pionix-labs/glu-image",
+    "description": "Laravel 5 support for glu-image package",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "authors": [
@@ -10,14 +10,19 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.3.3",
         "intervention/image": "2.*",
         "sybio/gif-frame-extractor": "1.*",
-        "sybio/gif-creator": "1.*"
+        "sybio/gif-creator": "1.*",
+        "illuminate/support": "4.*|5.*"
+    },
+    "require-dev":{
+        "squizlabs/php_codesniffer": "^3.3",
+        "phpunit/phpunit": "^4.8"
     },
     "autoload": {
-        "psr-0": {
-            "Sviatovigt\\GluImage": "src/"
+        "psr-4": {
+            "PionixLabs\\GluImage\\": "src/"
         }
     },
     "config": {
