Add glukash gif creator package as a repository in composer.json.

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,12 @@
             "email": "glukash@gmail.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/glukash/GifCreator"
+        }
+    ],
     "require": {
         "php": ">=5.3.3",
         "intervention/image": "2.*",
